--- a/templates/base.html
+++ b/templates/base.html
@@ -4,15 +4,24 @@
 <html lang="en">
 
 <head>
-
+    {% block meta %}
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    {% endblock %}
 
+    {% block extra_meta %}
+    {% endblock %}
 
+    {% block corecss %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    {% endblock %}
 
+    {% block extra_css %}
+    {% endblock %}
+
+    {% block corejs %}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
     </script>
@@ -22,11 +31,29 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous">
     </script>
+    {% endblock %}
+
+    {% block extra_js %}
+    {% endblock %}
 
     <title>Top Rock</title>
 </head>
 
 <body>
+    <header class="container-fluid fixed-top"></header>
+
+    {% if messages %}
+    <div class="container-fluid"></div>
+    {% endif %}
+
+    {% block page_header %}
+    {% endblock %}
+
+    {% block content %}
+    {% endblock %}
+
+    {% block postloadjs %}
+    {% endblock %}
 
 </body>
 
