Added Hompage Content

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,29 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block content %}
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class="col">
 
+        </div>
+    </div>
+</div>
+{% endblock %}
+
+{% block content %}
+<div class="container h-100">
+    <div class="row h-100">
+        <div class="col-7 col-md-6 my-auto">
+            <h1 class="display-4 heading-text">
+                placeholder
+            </h1>
+            <div>
+                <h4>
+                    <a href="" class="banner-button btn btn-lg rounded-0 py-3">Enter Shop</a>
+                </h4>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
