completed home page and changes to bass.html with css for both

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,15 +12,18 @@
 {% endblock %}
 
 {% block content %}
-<section class="hero-img">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h5>Welcome to Top Rock</h5>
-                <p>Climbing is a challenging and exciting pursuit, but it is important for people like yourself to have the correct equipment to ensure they stay safe at all times, whether you are scaling the highest mountains or just starting out. So if you're scaling the heights when rock climbing, heading up above the clouds while mountain climbing or hanging a few feet from the ground while bouldering, Top Rock stocks a range of climbing gear to suit your needs.</p>
-                <p><a href="#" class="btn btn-primary btn-large">Enter the Shop</a></p>
+<div class="container h-100 w-100 hero-img">
+    <div class="row h-100">
+        <div class="col-7 col-md-6 my-auto">
+            <h1 class="display-4 heading-text">
+                Welcome to Top Rock
+            </h1>
+            <div class="my-5">
+                <h4>
+                    <a href="" class="btn-primary btn btn-lg rounded-10 text-uppercase py-3">Enter the Shop</a>
+                </h4>
             </div>
         </div>
     </div>
-</section>
+</div>
 {% endblock %}
