--- a/templates/base.html
+++ b/templates/base.html
@@ -16,13 +16,19 @@
     {% block corecss %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400&family=Urbanist:wght@300;400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
     {% endblock %}
 
     {% block extra_css %}
     {% endblock %}
 
     {% block corejs %}
+    <script src="https://kit.fontawesome.com/e9c73d7092.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
     </script>
@@ -45,7 +51,7 @@
         <div id="topnav" class="row bg-secondary pt-lg-2 d-none d-lg-flex">
             <div class="col-13 col-lg-4 my auto py-1 py-lg-0 text-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link primary-action">
-                    <h2>Top Rock</h2>
+                    <h2 class>Top Rock</h2>
                 </a>
             </div>
             <div class="col-13 col-lg-4 my auto py-1 py-lg-0">
@@ -66,11 +72,11 @@
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <li class="list-inline-item dropdown">
-                        <a class=" nav-link" href="#" id="user-options" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
+                        <a class=" nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
                             <div class="text-center">
                                 <div><i class="fas fa-user fa-lg"></i></div>
-                                <p class="my-0 heading-text">My Account</p>
+                                <p class="my-0 nav-text">My Account</p>
                             </div>
                         </a>
                         <div class="dropdown-menu border-0 bg-secondary" aria-labelledby="user-options">
@@ -91,7 +97,7 @@
                             href="">
                             <div class="text-center">
                                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                                <p class="my-0 heading-text">
+                                <p class="my-0 nav-text">
                                     {% if grand_total %}
                                     ${{ grand_total|floatformat:2 }}
                                     {% else %}
