--- a/static/css/base.css
+++ b/static/css/base.css
@@ -37,6 +37,11 @@ h1, h2, h3, h4, h5{
     color: #BCD3D8;
 }
 
+.navbar-light .navbar-nav .nav-link {
+    color: #BCD3D8;
+}
+.nav-link.active
+
 .heading-text{
     color: #F6FBFC;
 }
@@ -54,6 +59,9 @@ h1, h2, h3, h4, h5{
     width: 1.5rem;
 }
 
+.main-logo-link {
+    width: fit-content;
+}
 
 /* Index.html */
 .hero-img {
@@ -85,6 +93,6 @@ h1, h2, h3, h4, h5{
       }
   
       .header-container {
-          padding-top: 64px;
+        padding-top: 164px;
       }
   }
