--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,7 +20,7 @@
             </h1>
             <div class="my-5">
                 <h4>
-                    <a href="" class="btn-primary btn btn-lg rounded-10 text-uppercase py-3">Enter the Shop</a>
+                    <a href="{% url 'products' %}" class="btn-primary btn btn-lg rounded-10 text-uppercase py-3">Enter the Shop</a>
                 </h4>
             </div>
         </div>
