--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,42 +1,50 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a class="nav-text  nav-link mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-text  nav-link mr-5" href="#" id="all-products-link" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
                 All Products
             </a>
             <div class="dropdown-menu border-0 bg-secondary" aria-labelledby="all-products-link">
                 <a href="" class="dropdown-item">By Price</a>
                 <a href="" class="dropdown-item ">By Rating</a>
                 <a href="" class="dropdown-item ">By Category</a>
-                <a href="" class="dropdown-item">All Products</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
 
         <li class="nav-item dropdown ">
-            <a class="nav-text  nav-link mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Clothing
+            <a class="nav-text  nav-link mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                Equipment
             </a>
-            <div class="dropdown-menu border-0 bg-secondary" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Activewear &amp; Essentials</a>
-                <a href="" class="dropdown-item">Jeans</a>
-                <a href="" class="dropdown-item">Shirts</a>
-                <a href="" class="dropdown-item">All Clothing</a>
+            <div class="dropdown-menu border-0 bg-secondary" aria-labelledby="equipment-link">
+                <a href="" class="dropdown-item">Harnesses</a>
+                <a href="" class="dropdown-item">Shoes</a>
+                <a href="" class="dropdown-item">Chalk Bags</a>
+                <a href="" class="dropdown-item">Chalk</a>
+                <a href="" class="dropdown-item">All Equipment</a>
+
             </div>
         </li>
 
         <li class="nav-item dropdown">
-            <a class="nav-text  nav-link mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Homeware
+            <a class="nav-text  nav-link mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                Small Gear
             </a>
-            <div class="dropdown-menu border-0 bg-secondary" aria-labelledby="homeware-link">
-                <a href="" class="dropdown-item">Bed &amp; Bath</a>
-                <a href="" class="dropdown-item">Kitchen &amp; Dining</a>
-                <a href="" class="dropdown-item">All Homeware</a>
+            <div class="dropdown-menu border-0 bg-secondary" aria-labelledby="gear-link">
+                <a href="" class="dropdown-item">Belay devices</a>
+                <a href="" class="dropdown-item">Carabiners</a>
+                <a href="" class="dropdown-item">Bags</a>
+                <a href="" class="dropdown-item">accessories</a>
+                <a href="" class="dropdown-item">All Gear</a>
             </div>
         </li>
 
         <li class="nav-item dropdown">
-            <a class="nav-text nav-link" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-text nav-link" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
                 Special Offers
             </a>
             <div class="dropdown-menu border-0 bg-secondary" aria-labelledby="specials-link">
