--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                 </a>
             </div>
             <div class="col-13 col-lg-4 my auto py-1 py-lg-0">
-                <form method="GET" action="">
+                <form method="GET" action="{% url 'products' %}">
                     <div class="input-group w-100">
                         <input class="form-control btn-secondary" type="text" name="q">
                         <div class="input-group-append">
