--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -7,7 +7,7 @@
           </div>
       </a>
       <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0 bg-secondary" aria-labelledby="mobile-search">
-          <form class="form" method="GET" action="">
+          <form class="form" method="GET" action="{% url 'products' %}">
               <div class="input-group w-100">
                   <input class="form-control  btn-secondary" type="text" name="q">
                   <div class="input-group-append">
